			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.05a: *********************************

IMP/MANL (10/02/06, GVG) Adding nodes that meet min rules in TSMC180.

IMP/MAN: (9/28/06, GVG) Warning if you try to bring a 3D view from technologies without 3D factory
values.

BUG: (9/28/06, DN) Exception in cellGroup.contains(Cell) in duplicateGroupAction (Bug #1234).
FIX: cellGroup.contains(Cell) returns false when Cell argument is null.

BUG: (9/28/06, DN) ExportChanges.DeleteExports job calls GUI in doIt.
FIX: Move cantEdit calls out of ExportChanges.DeleteExports.doIt.

IMP: (9/28/06, DN) Remove some calls of "NodeInst.hasExports()", "NodeInst.getNumExports()", "NodeInst.getExports()" out
   of crytical database modification loops. Future refactoring for memory saving will make these methods slower when called after
   Cell modification.

IMP/MAN: (9/28/06, GVG) Enable zoom via selection area (bug #135). Indeed, entire tool bar was disabled
because the scenegraph is displayed in its own frame and it is not worth it to hack it.
Solution only valid for SDI mode.

BUG: (9/28/06, DN) NCC regressions fail when cell group has multiple schematics.
FIX: In Cell.CellGroup.setMainSchematic use first schematic cell.
     In Cell.checkAndRepair issue warnings about extraneous schematic cells.

BUG: (9/28/06, DN) A lot of warnings during Nodable deserialization.
FIX: In EObjectOutputStream.ENodable.readResolve use getNetlist() instead of getUserNetlist().

BUG: (9/27/06, SMR) When "Node Moves With Export" is selected, all export
     text moves the export (Bug #1232).
FIX: In DisplayedText.objectMovesWithText(), only test export name.

BUG: (9/27/06, SMR) IRSIM "vector" and "set" commands don't work.
FIX: In Analyzer.setIn(), add "case '1':" after "case 'h':" and add
     "case '0':" after "case 'l':".
